--- a/services/cli/Cargo.toml
+++ b/services/cli/Cargo.toml
@@ -11,6 +11,7 @@ path = "src/main.rs"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.28"
 clap = "2.33.0"
 config = "0.10.1"
 dialoguer = "0.6.2"
