--- a/.github/workflows/cli.yml
+++ b/.github/workflows/cli.yml
@@ -13,7 +13,7 @@ jobs:
           default: true
           override: true
       - name: Build
-        run: cd ./services/cli/ && cargo build --all --release && strip ./target/release/git-ventures && mv ./target/release/git-ventures ./target/release/git-ventures-amd64
+        run: cd services/cli/ && cargo build --all --release && cd ../../target/release && ls -a
       - name: Release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
