wip: updating mdbook preprocessors (mermaid, plantuml); adding logo

--- a/documentation/book.toml
+++ b/documentation/book.toml
@@ -4,3 +4,19 @@ language = "en"
 multilingual = false
 src = "src"
 title = "Git Ventures"
+[preprocessor]
+[preprocessor.toc]
+command = "mdbook-toc"
+[preprocessor.mermaid]
+command = "mdbook-mermaid"
+renderer = ["html"]
+[preprocessor.plantuml]
+plantuml-cmd="plantuml"
+[output]
+# [output.latex]
+# latex    = true  # default = true
+# pdf      = true  # default = false
+# markdown = true  # default = false
+[output.html]
+additional-css =["mermaid.css"]
+additional-js =["mermaid.min.js", "mermaid-init.js"]
